@@ -1,3 +1,11 @@
+TAG: qcreports_db-6-0-16-26
+DATE: 04/21/2021
+STAFF: sc
+WTS2-569 - updates to:
+mgd/GXD_HTSampleNoAge.sql
+mgd/GXD_SpecNoAge.sql
+mgd/RECOMB_SpecNoAge.sql
+
 TAG: qcreports_db-6-0-16-25
 TAG: qcreports_db-6-0-16-24
 DATE: 04/21/2021
